# dqn-comb

./: .gitignore  CMakeLists.txt  CMakeSettings.json  makefile
src/: benchmark.cpp  game.cpp  game.h  gendata.cpp  gendata_2.cpp  gendata_3.cpp  net.py  selfplay.cpp  strategy.h  test.cpp  test.py  train.py
